@@ -302,11 +302,11 @@
 		#Define custom food values, one string = one item. Those items are not affected by other changes such as 'Food Hunger Multiplier'.
 		#The format is modid:itemid,hunger,saturation. Saturation is optional
 		#E.g. 'minecraft:cooked_porkchop,16,1.0' will make cooked porkchops give 8 shranks of food and 16 saturation (actual saturation is calculated by 'saturation * 2 * hunger').
-		"Custom Food Hunger" = ["minecraft:rotten_flesh,2"]
+		"Custom Food Hunger" = ["corn_delight:nachos_bowl,5"]
 
 		#Items or tags that will ignore the food multipliers. This can be inverted via 'Blacklist as Whitelist'. Each entry has an item or tag. E.g. ["minecraft:stone", "minecraft:cooked_porkchop"].
 		[Hunger."Food Hunger"."Food Blacklist"]
-			Blacklist = ["#createpunk:meals"]
+			Blacklist = ["#createpunk:meals", "fruittrees:honey_pomelo_tea", "kubejs:grilled_corn", "kubejs:boiled_corn"]
 			#If true the list will be treated as a whitelist instead of blacklist
 			"List as Whitelist" = false
 
