@@ -8,7 +8,7 @@ onEvent('jei.hide.items', event => {
 
     event.hide('create:dough');
 
-    event.hide('buzzzier_bees:honeyed_apple');
+    event.hide('buzzier_bees:honeyed_apple');
 
     // Temporary, until beehive variants are properly added
     event.hide('compatoplenty:cherry_beehive');
